--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,7 @@
    },
    "content_scripts": [ {
       "all_frames": true,
-      "js": [ "js/jquery-1.7.1.min.js", "js/main.js" ],
+      "js": [ "js/jquery-1.7.1.min.js", "js/lodash.js", "js/main.js" ],
       "matches": [ "http://*/*", "https://*/*" ],
       "run_at": "document_end"
    } ],
